`Updated various components and services for user authentication and profile management`

--- a/src/app/user/coordinator/coordinator-dashboard/coordinator-dashboard.component.html
+++ b/src/app/user/coordinator/coordinator-dashboard/coordinator-dashboard.component.html
@@ -32,9 +32,9 @@
   <div
     class="flex flex-col col-span-1 gap-7 sm:flex-row lg:flex-row md:flex-col mt-14"
   >
-    <div class="w-full h-40 rounded-lg bg-slate-800 flex flex-cols-2 gap-1 justify-between">
+    <div class="flex justify-between w-full h-40 gap-1 rounded-lg bg-slate-800 flex-cols-2">
      <div class="flex flex-col gap-1 p-10">
-      <p class="text-white font-bold "> Total Student Programs</p>
+      <p class="font-bold text-white "> Total Student Programs</p>
       <p class="text-2xl text-white">{{students.length}}</p>
 
      </div>
@@ -44,9 +44,9 @@
      </div>
 
     </div>
-    <div class="w-full h-40 rounded-lg bg-blue-600 flex flex-cols-2 gap-1 justify-between">
+    <div class="flex justify-between w-full h-40 gap-1 bg-blue-600 rounded-lg flex-cols-2">
       <div class="flex flex-col gap-1 p-10">
-       <p class="text-white font-bold "> Total Instructors</p>
+       <p class="font-bold text-white "> Total Instructors</p>
        <p class="text-2xl text-white">{{instructors.length}}</p>
 
       </div>
@@ -56,9 +56,9 @@
       </div>
 
      </div>
-     <div class="w-full h-40 rounded-lg bg-slate-800 flex flex-cols-2 gap-1 justify-between">
+     <div class="flex justify-between w-full h-40 gap-1 rounded-lg bg-slate-800 flex-cols-2">
       <div class="flex flex-col gap-1 p-10">
-       <p class="text-white font-bold "> Total Courses</p>
+       <p class="font-bold text-white "> Total Courses</p>
        <p class="text-2xl text-white">{{course_list.length}}</p>
 
       </div>
@@ -70,8 +70,8 @@
      </div>
   </div>
 
-  <div class="w-full h-80 bg-gray-200 mt-10 border border-gray-300 shadow-lg rounded-lg">
-    <h1 class="font-bold text-2xl p-2">Recent Activities</h1>
+  <!-- <div class="w-full mt-10 bg-gray-200 border border-gray-300 rounded-lg shadow-lg h-80">
+    <h1 class="p-2 text-2xl font-bold">Recent Activities</h1>
 
-  </div>
+  </div> -->
 </div>
