--- a/src/app/user/timetable-master/t-master-header/t-master-header.component.html
+++ b/src/app/user/timetable-master/t-master-header/t-master-header.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="fixed top-0 z-50 w-full h-20 bg-white shadow-lg"
+  class="fixed top-0 z-50 w-full h-16 bg-white shadow-lg"
 >
   <div class="px-3 py-3 lg:px-5 lg:pl-3">
     <div class="flex items-center justify-between">
@@ -29,8 +29,8 @@
         <a href="https://flowbite.com" class="flex ms-2 md:me-24">
           <img src="images/logo.png" class="h-8 pt-3 me-3" alt="FlowBite Logo" />
           <span
-            class="self-center pt-3 text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white"
-            >TimeTable</span
+            class="self-center pt-3 font-semibold text-md whitespace-nowrap dark:text-white"
+            >TimeTable System</span
           >
         </a>
       </div>
