--- a/src/app/user/timetable-master/timetable-master-layout/timetable-master-layout.component.html
+++ b/src/app/user/timetable-master/timetable-master-layout/timetable-master-layout.component.html
@@ -1,4 +1,4 @@
-<div class="layout-container">
+<div class="bg-gray-200 layout-container">
   <app-t-master-header></app-t-master-header>
   <app-t-master-sidebar></app-t-master-sidebar>
 
