--- a/src/app/user/timetable-master/t-master-settings/t-master-settings.component.html
+++ b/src/app/user/timetable-master/t-master-settings/t-master-settings.component.html
@@ -1,1 +1,34 @@
-<p>t-master-settings works!</p>
+<div class="w-full h-full bg-gray-200 mt-28">
+
+
+
+  <!-- Breadcrumb -->
+  <nav class="justify-between px-4 py-3 mt-16 text-gray-700 border border-gray-200 rounded-lg sm:flex sm:px-5 bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
+    <ol class="inline-flex items-center mb-3 space-x-1 md:space-x-2 rtl:space-x-reverse sm:mb-0">
+      <li>
+        <div class="flex items-center">
+          <a href="#" class="text-sm font-medium text-gray-700 ms-1 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Home</a>
+        </div>
+      </li>
+      <li aria-current="page">
+        <div class="flex items-center">
+          <svg class="w-3 h-3 mx-1 text-gray-400 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+          </svg>
+          <a href="#" class="text-sm font-medium text-gray-700 ms-1 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Profile</a>
+        </div>
+      </li>
+
+    </ol>
+    <div>
+
+
+    </div>
+  </nav>
+
+
+
+
+
+
+  </div>
