update 11 files and delete 4 files

--- a/src/app/user/admin/admin-layout/admin-layout.component.html
+++ b/src/app/user/admin/admin-layout/admin-layout.component.html
@@ -1,1 +1,13 @@
-<p>admin-layout works!</p>
+<div class="h-screen layout-container">
+  <app-admin-header></app-admin-header>
+<app-admin-sidebar></app-admin-sidebar>
+
+  <div class="p-4 bg-gray-200 sm:ml-64">
+    <router-outlet></router-outlet>
+    <!-- Child components will be displayed here -->
+
+    <app-admin-footer></app-admin-footer>
+  </div>
+
+  <!-- Footer will also be displayed in the LayoutComponent -->
+</div>
