--- a/src/app/user/coordinator/coordinator-instructors/coordinator-instructors.component.html
+++ b/src/app/user/coordinator/coordinator-instructors/coordinator-instructors.component.html
@@ -15,7 +15,7 @@
           <svg class="w-3 h-3 mx-1 text-gray-400 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
           </svg>
-          <a href="#" class="text-sm font-medium text-gray-700 ms-1 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Instructors</a>
+          <a href="#" class="text-sm font-medium text-gray-700 ms-1 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Instructors    {{userData?.department}}</a>
         </div>
       </li>
 
@@ -75,6 +75,15 @@
       </th>
 
       <th>
+          <span class="flex items-center">
+             Gender
+              <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
+              </svg>
+          </span>
+      </th>
+
+      <th>
         <span class="flex items-center">
           Email
             <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
@@ -91,6 +100,8 @@
           </svg>
       </span>
   </th>
+
+
 
   <!-- <th>
     <span class="flex items-center">
@@ -110,6 +121,7 @@
          <td class="font-bold">{{item.first_name}}</td>
          <td class="font-bold">{{item.middle_name}}</td>
          <td class="font-bold">{{item.last_name}}</td>
+          <td class="font-bold">{{item.gender}}</td>
          <td class="font-bold">{{item.email}}</td>
          <td class="font-bold">{{item.phone_number}}</td>
          <!-- <td>
@@ -176,6 +188,32 @@
 
          <div class="p-3 ">
             <form (ngSubmit)="Insert_NewInstructor()" #Instructorform="ngForm">
+
+
+                 <div class="mt-4">
+                  <label
+                    for="department"
+                    class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
+                    >Department</label
+                  >
+                   <select
+                id="gender"
+                name="gender"
+                [(ngModel)]="department_id"
+                #v_department="ngModel"
+                class="block w-full p-2 text-sm font-bold text-gray-900 border border-gray-300 rounded bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray -100 dark:text-white dark:placeholder-gray-400 dark:border-gray-700"
+                required
+                >
+                <option *ngFor="let item of department" value="{{item.id}}">{{item.collage.short_name}} | {{item.short_name}}</option>
+
+
+                </select>
+                <div
+                  *ngIf="v_department.invalid && v_department.touched"
+                  class="mt-1 text-sm text-red-600"
+                ></div>
+                </div>
+
 
               <div class="mt-4">
                 <label
@@ -271,6 +309,30 @@
                     *ngIf="v_lastname.invalid && v_lastname.touched"
                     class="mt-1 text-sm text-red-600"
                   ></div>
+                </div>
+
+                 <div class="mt-4">
+                  <label
+                    for="last_name"
+                    class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
+                    >Gender</label
+                  >
+                   <select
+                id="gender"
+                name="gender"
+                [(ngModel)]="gender"
+                #v_gender="ngModel"
+                class="block w-full p-2 text-sm font-bold text-gray-900 border border-gray-300 rounded bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray -100 dark:text-white dark:placeholder-gray-400 dark:border-gray-700"
+                required
+                >
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+
+                </select>
+                <div
+                  *ngIf="v_gender.invalid && v_gender.touched"
+                  class="mt-1 text-sm text-red-600"
+                ></div>
                 </div>
 
 
