--- a/src/app/user/admin/venue/venue.component.html
+++ b/src/app/user/admin/venue/venue.component.html
@@ -114,7 +114,7 @@
 </tr>
 
           <tr *ngIf="venue.length === 0">
-            <td colspan="4" class="px-6 py-4 italic text-center text-gray-500 dark:text-gray-400">No Deparment found.</td>
+            <td colspan="4" class="px-6 py-4 italic text-center text-gray-500 dark:text-gray-400">No Venue found.</td>
           </tr>
         </tbody>
       </table>
