--- a/src/app/user/coordinator/coordinator-instructors/coordinator-instructors.component.html
+++ b/src/app/user/coordinator/coordinator-instructors/coordinator-instructors.component.html
@@ -15,7 +15,7 @@
           <svg class="w-3 h-3 mx-1 text-gray-400 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
           </svg>
-          <a href="#" class="text-sm font-medium text-gray-700 ms-1 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Instructors    {{userData?.department}}</a>
+          <a href="#" class="text-sm font-medium text-gray-700 ms-1 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Instructors    </a>
         </div>
       </li>
 
@@ -35,6 +35,8 @@
 
 
 <div class="mt-6">
+
+  <h2 class=" p-3 font-bold font-sans text-md ">    Department :     <span class="px-2 py-1 text-sm text-blue-600 bg-blue-100 rounded-full">  {{userData?.department}} </span></h2>
 
 <table id="search-table">
   <thead>
