--- a/src/app/user/coordinator/coordinator-students/coordinator-students.component.html
+++ b/src/app/user/coordinator/coordinator-students/coordinator-students.component.html
@@ -31,16 +31,16 @@
     </ol>
 
 
-    <div class="grid grid-cols-2 gap-2">
-      <button (click)="openUploadModal()"  class="inline-flex items-center px-3 py-2 text-sm font-normal text-center text-gray-600 bg-gray-200 rounded-lg hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:text-gray-300 dark:focus:ring-gray-700"><svg class="w-3 h-3 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 20">
+    <div class="grid grid-cols-1 gap-2">
+      <!-- <button (click)="openUploadModal()"  class="inline-flex items-center px-3 py-2 text-sm font-normal text-center text-gray-600 bg-gray-200 rounded-lg hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:text-gray-300 dark:focus:ring-gray-700"><svg class="w-3 h-3 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 20">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5v10M3 5a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 10a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm9-10v.4A3.6 3.6 0 0 1 8.4 9H6.61A3.6 3.6 0 0 0 3 12.605M14.458 3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
       </svg>Upload Student<svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
-      </svg></button>
+      </svg></button> -->
 
       <button (click)="openModal()"  class="inline-flex items-center px-3 py-2 text-sm font-normal text-center text-gray-600 bg-gray-200 rounded-lg hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:text-gray-300 dark:focus:ring-gray-700"><svg class="w-3 h-3 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 20">
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5v10M3 5a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 10a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm9-10v.4A3.6 3.6 0 0 1 8.4 9H6.61A3.6 3.6 0 0 0 3 12.605M14.458 3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
-    </svg>New Student <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+    </svg>New Program <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
     </svg></button>
 
@@ -82,6 +82,15 @@
               </span>
           </th>
 
+            <th>
+              <span class="flex items-center">
+                  Code
+                  <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
+                  </svg>
+              </span>
+          </th>
+
           <th>
             <span class="flex items-center">
                Total
@@ -102,34 +111,58 @@
 
       </tr>
   </thead>
-  <tbody class="bg-white">
+ <tbody class="bg-white">
+  <ng-container *ngFor="let item of students">
+  <tr *ngIf="item.department.short_name === userData?.department">
 
-    <tr *ngFor="let item of students">
-         <td class="font-bold">{{item.id}}</td>
-         <td class="font-bold">{{item.programme}}</td>
-         <td class="font-bold">{{item.total_students}}</td>
 
-         <td>
-          <div>
+    <td class="font-bold">{{ item.id }}</td>
+    <!-- Programme -->
+    <td class="font-bold">
+      <ng-container *ngIf="editId === item.id; else showProgramme">
+        <input [(ngModel)]="editProgramme" class="border p-1 rounded w-full" />
+      </ng-container>
+      <ng-template #showProgramme>{{ item.programme }}</ng-template>
+    </td>
 
-            <button (click)="openUpdateModal(item.id)" class="p-1 rounded hover:bg-gray-200 dark:hover:bg-gray-700">
-              <svg class="w-6 h-6 text-slate-700 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-                <path fill-rule="evenodd"
+    <!-- Programme Code -->
+    <td class="font-bold">
+      <ng-container *ngIf="editId === item.id; else showCode">
+        <input [(ngModel)]="editCode" class="border p-1 rounded w-full" />
+      </ng-container>
+      <ng-template #showCode>{{ item.programme_code }}</ng-template>
+    </td>
+
+    <!-- Total Students -->
+    <td class="font-bold">
+      <ng-container *ngIf="editId === item.id; else showTotal">
+        <input type="number" [(ngModel)]="editTotal" class="border p-1 rounded w-full" />
+      </ng-container>
+      <ng-template #showTotal>{{ item.total_students }}</ng-template>
+    </td>
+
+    <!-- Action Buttons -->
+    <td>
+      <div *ngIf="editId !== item.id">
+        <button (click)="openUpdateModal(item.id)" class="p-1 rounded hover:bg-gray-200 dark:hover:bg-gray-700">
+          <svg class="w-6 h-6 text-slate-700 dark:text-white" xmlns="http://www.w3.org/2000/svg"
+               fill="currentColor" viewBox="0 0 24 24">
+            <path fill-rule="evenodd"
                   d="M5 8a4 4 0 1 1 7.796 1.263l-2.533 2.534A4 4 0 0 1 5 8Zm4.06 5H7a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h2.172a2.999 2.999 0 0 1-.114-1.588l.674-3.372a3 3 0 0 1 .82-1.533L9.06 13Zm9.032-5a2.907 2.907 0 0 0-2.056.852L9.967 14.92a1 1 0 0 0-.273.51l-.675 3.373a1 1 0 0 0 1.177 1.177l3.372-.675a1 1 0 0 0 .511-.273l6.07-6.07a2.91 2.91 0 0 0-.944-4.742A2.907 2.907 0 0 0 18.092 8Z"
                   clip-rule="evenodd" />
-              </svg>
-            </button>
-          </div>
+          </svg>
+        </button>
+      </div>
 
+      <div *ngIf="editId === item.id" class="flex gap-2">
+        <button (click)="saveEdit()" class="px-2 py-1 bg-blue-400 text-white rounded">Save</button>
+        <button (click)="cancelEdit()" class="px-2 py-1 bg-red-600 text-white rounded">Cancel</button>
+      </div>
+    </td>
+  </tr>
+  </ng-container>
+</tbody>
 
-
-         </td>
-
-    </tr>
-
-
-  </tbody>
 </table>
 
 </div>
@@ -142,7 +175,7 @@
       <div class="p-2 mt-20 bg-white rounded-lg shadow-lg " style="width: 500px;">
 
         <div class="grid justify-between grid-flow-col">
-          <h3 class="mt-2 font-semibold text-md">New Students Programme</h3>
+          <h3 class="mt-2 font-semibold text-md">New Programme for {{userData?.department}}  Department</h3>
           <div class="flex justify-end ">
             <button (click)="closeModal()" class="px-4 py-2 text-white bg-red-500 rounded hover:bg-red-600">
               Close
@@ -152,7 +185,34 @@
 
 
          <div class="p-3 ">
-            <form (ngSubmit)="Insert_Student()" #Studentform="ngForm">
+            <form (ngSubmit)="Insert_Program()" #Studentform="ngForm">
+
+                   <div class="mt-4">
+                  <label
+                    for="department"
+                    class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
+                    >Department</label
+                  >
+                   <select
+                id="departmen"
+                name="departmen"
+                [(ngModel)]="department_id"
+                #v_department="ngModel"
+                class="block w-full p-2 text-sm font-bold text-gray-900 border border-gray-300 rounded bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray -100 dark:text-white dark:placeholder-gray-400 dark:border-gray-700"
+                required
+                >
+        <ng-container *ngFor="let item of department">
+  <option *ngIf="item.short_name === userData?.department" [value]="item.id">
+    {{item.collage.short_name}} | {{item.short_name}}
+  </option>
+</ng-container>
+
+                </select>
+                <div
+                  *ngIf="v_department.invalid && v_department.touched"
+                  class="mt-1 text-sm text-red-600"
+                ></div>
+                </div>
 
               <div class="mt-4">
                 <label
@@ -166,7 +226,7 @@
                   type="text"
                   id="programme"
                   name="programme"
-                  placeholder="example SE1"
+                  placeholder="SOFTWARE ENGINEERING"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
                   required
                 />
@@ -177,25 +237,48 @@
                 >Field Required</div>
               </div>
 
+              <div class="mt-4">
+                <label
+                  for="programme"
+                  class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
+                  >Program Code</label
+                >
+                <input
+                  [(ngModel)]="programme_code"
+                  #v_programme_code="ngModel"
+                  type="text"
+                  id="programme_code"
+                  name="programme_code"
+                  placeholder="SE"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
+                  required
+                />
+                <!-- Error message for programme -->
+                <div
+                  *ngIf="v_programme_code.invalid && v_programme_code.touched"
+                  class="mt-1 text-sm text-red-600"
+                >Field Required</div>
+              </div>
+
 
               <div class="mt-4">
                 <label
-                  for="middle_name"
+                  for="Duration "
                   class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
-                  >Total Students</label
+                  >Duration</label
                 >
                 <input
-                  [(ngModel)]="total_students"
-                  #v_total_students="ngModel"
+                  [(ngModel)]="duration"
+                  #v_duration="ngModel"
                   type="number"
-                  id="total_students"
-                  name="total_students"
+                  id="duration"
+                  name="duration"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
                   required
                 />
                 <!-- Error message for Students-->
                 <div
-                  *ngIf="v_total_students.invalid && v_total_students.touched"
+                  *ngIf="v_duration.invalid && v_duration.touched"
                   class="mt-1 text-sm text-red-600"
                 ></div>
               </div>
